message ProjectExtension {
  repeated bytes authCoreKeys = 1;
  repeated bytes wantCoreKeys = 2;
}
